--- a/templates/utilisateurs/createAdmin.html.twig
+++ b/templates/utilisateurs/createAdmin.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="py-base mx-auto" style="max-width: 35rem;">
-    <h1> Création de compte </h1>
+    <h1> Création de compte Admin </h1>
     {{ form(form)}}
 </div>
 {% endblock %}
