--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,12 +25,8 @@
 
 </head>
 
-<<<<<<< HEAD
-<body
-    style="src: url('public/font/_TOP_SECRET_.otf'); background-image:url({{ asset('img/fondShining.jpg')}}); background-size:contain; background-repeat:repeat">
-=======
-<body style="font-family: '_TOP_SECRET.otf'; src: url('public/font/_TOP_SECRET_.otf')">
->>>>>>> be19b93685201e7e0699ae1482f08174e5fab02c
+<body>
+    <!-- FONT Ver.1 = style="font-family: '_TOP_SECRET.otf'; src: url('public/font/_TOP_SECRET_.otf')" -->
 
     <!-- Header banniere -->
     <header class="position-relative">
@@ -71,20 +67,28 @@
                     <a class="nav-link text-danger strong small m-2 text-uppercase" style="text-align:center"
                         href={{ path('list_film') }}>films</a>
                 </div>
-                <div class="nav-bar-ticket-2">
-                    <a class="nav-link text-danger strong small m-1 text-uppercase" style="text-align:center"
+                <div class="nav-bar-ticket-1">
+                    <a class="nav-link text-danger strong small text-uppercase" style="text-align:center"
                         href={{ path('top') }}>top de la<br>
                         rédac'</a>
                 </div>
-                <!-- Gestion utilisateur/admin -->
+                <!-- Gestion Admin -->
+                {% if is_granted("ROLE_ADMIN") %}
+                <div class="nav-bar-ticket-1">
+                    <a class=" nav-link text-danger strong small text-uppercase" style="text-align:center"
+                        href={{ path('admin_menu') }}>Menu<br> admin</a>
+                </div>
+                {% endif %}
+                <!-- Gestion utilisateur -->
                 {% if is_granted("ROLE_USER") %}
                 <div>
                     <div>
-                        <a class="nav-link btn btn-primary mt-1" href={{ path('app_logout') }}>SE
+                        <a class="nav-link btn btn-info mt-1" style="color:white;" href={{ path('app_logout') }}>SE
                             DECONNECTER</a>
                     </div>
                     <div>
-                        <a class="nav-link btn btn-primary mt-2" href={{ path('detail_utilisateur') }}>ESPACE
+                        <a class="nav-link btn btn-info mt-2" style="color:white;"
+                            href={{ path('detail_utilisateur') }}>ESPACE
                             PERSONNEL</a>
                     </div>
                 </div>
@@ -95,21 +99,18 @@
                 </div>
                 {% endif %}
 
-                <div class="nav-bar-ticket-2">
-                    <a class=" nav-link text-danger strong small m-1 text-uppercase" style="text-align:center"
-                        href={{ path('app_login') }}>Menu<br> admin</a>
-                </div>
             </div>
         </div>
     </nav>
 
-{# Wallpaper sang #}
-<div class="wp"  style="background-image:url('{{ asset('img/sangWP.jpg') }}'); background-size:cover">
-    <div class="container"> 
-        {% block body %}
-        {% endblock %}
+    {# Wallpaper sang #}
+    <div class="wp" style="background-image:url('{{ asset('img/sangWP.jpg') }}'); background-size:cover">
+
+        <div class="container" style="max-width: 60rem;">
+            {% block body %}
+            {% endblock %}
+        </div>
     </div>
-</div>
     <!-- footer -->
     <footer class="py-1" style="background-color: #0a0a0a;">
         <div class="container">
