--- a/templates/utilisateurs/updatePassword.html.twig
+++ b/templates/utilisateurs/updatePassword.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Modifier votre mot de passe{% endblock %}
 
 {% block body %}
-<div class="mx-auto" style="width: 700px">
+<div class="py-base mx-auto" style="max-width: 35rem;">
     <h1 class="text-center">Modifier votre mot de passe</h1>
 
     {{ form(form) }}
