modif admin emails

--- a/templates/adminMenu.html.twig
+++ b/templates/adminMenu.html.twig
@@ -13,7 +13,7 @@
                 href={{ path('list_film') }}>Liste
                 des films (modifier/supprimer)</a>
             <a class="btn btn-outline-primary m-3 text-uppercase" style="text-align:center"
-                href={{ path('create_realisateur') }}>Ajouter un réalisateur</a>
+                href={{ path('create_film') }}>Ajouter un film</a>
         </div>
 
         <h3>Gestion des réalisateurs</h3>
