--- a/templates/emails/contact.html.twig
+++ b/templates/emails/contact.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nous contacter{% endblock %}
 
 {% block body %}
-<div class="mt-4 mx-auto container" style="max-width: 50rem">
+<div class="py-base mx-auto container" style="max-width: 50rem">
     <h1>Nous contacter</h1>
     <p>* champs obligatoires</p>
     {{ form_start(form) }}
