--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -29,6 +29,36 @@
     </div>
             <h2 class="my-5 text-center font-weight-bold">Shining (1980)</h2>
       </div>
+          <div class="carousel-item mt-5">
+      <a href="#"><img src={{ asset('img/affiches/Alien.jpg')}} class="d-block w-100 m-auto rounded" alt="..."></a>
+      <div class="carousel-caption d-none d-md-block">
+    </div>
+            <h2 class="my-5 text-center font-weight-bold">Alien (1979)</h2>
+      </div>
+          <div class="carousel-item mt-5">
+      <a href="#"><img src={{ asset('img/affiches/halloween.jpg')}} class="d-block w-100 m-auto rounded" alt="..."></a>
+      <div class="carousel-caption d-none d-md-block">
+    </div>
+            <h2 class="my-5 text-center font-weight-bold">Halloween (1978)</h2>
+      </div>
+          <div class="carousel-item mt-5">
+      <a href="#"><img src={{ asset('img/affiches/Psychose.jpg')}} class="d-block w-100 m-auto rounded" alt="..."></a>
+      <div class="carousel-caption d-none d-md-block">
+    </div>
+            <h2 class="my-5 text-center font-weight-bold">Psychose (1960)</h2>
+      </div>
+          <div class="carousel-item mt-5">
+      <a href="#"><img src={{ asset('img/affiches/Scream.jpg')}} class="d-block w-100 m-auto rounded" alt="..."></a>
+      <div class="carousel-caption d-none d-md-block">
+    </div>
+            <h2 class="my-5 text-center font-weight-bold">Scream (1996)</h2>
+      </div>
+          <div class="carousel-item mt-5">
+      <a href="#"><img src={{ asset('img/affiches/villageDamnes.jpg')}} class="d-block w-100 m-auto rounded" alt="..."></a>
+      <div class="carousel-caption d-none d-md-block">
+    </div>
+            <h2 class="my-5 text-center font-weight-bold">Le village des damnés (1995)</h2>
+      </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
