--- a/templates/top.html.twig
+++ b/templates/top.html.twig
@@ -7,37 +7,52 @@
 
 <h1 class="text-center"> TOP DE LA RÉDAC' </h1>
 
-<div class="d-flex justify-content-around">
-<img src={{ asset('img/avatarAyane.jpg')}} alt="avatar zombie">
-<img src={{ asset('img/avatarKevin.jpg')}} alt="avatar zombie">
-<img src={{ asset('img/avatarYann.jpg')}} alt="avatar zombie">
-</div>
-
-<div class="d-flex justify-content-around">
-<div class="m-5">
-<h2> AYANE </h2>
-<h4> 1) It Follows (2014) </h4>
+<div class="d-flex justify-content-between m-5">
+    <div class="card" style="width: 18rem;">
+        <img src={{ asset('img/avatarAyane.jpg')}} alt="avatar zombie">
+            <div class="card-body">
+            <h5 class="card-title">
+            <div class="bg-dark text-danger text-center">
+            <h2> AYANE </h2>
+            </div>
+            </h5>
+    <p class="card-text"><h4> 1) It Follows (2014) </h4>
 <h4> 2) Ring (1998) </h4>
-<h4> 3) Grave (2017) </h4>
+<h4> 3) Grave (2017) </h4></p>
+    </div>
 </div>
 
-
-
-<div class="m-5">
+<div class="card" style="width: 18rem;">
+  <img src={{ asset('img/avatarKevin.jpg')}} alt="avatar zombie">
+  <div class="card-body">
+    <h5 class="card-title"><div class="bg-dark text-danger text-center">
 <h2> KÉVIN </h2>
+</div></h5>
+    <p class="card-text">
 <h4> 1) Halloween, La Nuit Des Masques (1978) </h4>
 <h4> 2) Alien, Le Huitième Passager (1979) </h4>
 <h4> 3) Ça - "Il" Est Revenu (1990) </h4>
+</p>
+
+  </div>
 </div>
 
-
-
-<div class="m-5">
+<div class="card" style="width: 18rem;">
+  <img src={{ asset('img/avatarYann.jpg')}} alt="avatar zombie">
+  <div class="card-body">
+    <h5 class="card-title"><div class="bg-dark text-danger text-center">
 <h2> YANNICK </h2>
+</div></h5>
+    <p class="card-text">
 <h4> 1) Les Dents De La Mer (1975) </h4>
 <h4> 2) Alien, Le Huitième Passager (1979) </h4>
 <h4> 3) Gravity (2013) </h4>
+</p>
+
+  </div>
 </div>
+</div>
+
 
 
 
