--- a/templates/films/list.html.twig
+++ b/templates/films/list.html.twig
@@ -11,7 +11,7 @@
 
 <div class="card-deck">
     {% for film in filmList %}
-        <div class="card-body">
+        <div class="card-body text-center">
             <a href={{ path('detail_film', {id:film.id}) }} >
                 <img src="{{ asset('img/affiches/' ~ film.affiche) }}" alt="affiche">
             </a>
@@ -25,10 +25,6 @@
     {% endfor %}
 </div>
 
-
-{# {% if is_granted('ROLE_ADMIN') %}  #}
-    <a class="btn-block btn-lg btn-success text-center" href={{ path('create_film') }}> AJOUTER UN FILM </a> 
-{# {% endif %} #}
 <br> <br>
 
 {% endblock %}
