--- a/templates/films/detail.html.twig
+++ b/templates/films/detail.html.twig
@@ -69,7 +69,7 @@
 
         <p> <strong> OST : </strong> <br> <br>
             {% if film.ost is not null %} 
-                <a class="d-line p-2 bg-white text-danger" target="_blank" href= {{ film.ost }} > {{ film.ost }} </a>
+                <a class="text-bold git ptext-danger" target="_blank" href= {{ film.ost }} > {{ film.ost }} </a>
             {% endif %}
         </p>
 
