--- a/templates/films/list.html.twig
+++ b/templates/films/list.html.twig
@@ -11,24 +11,24 @@
 
 <div class="card-deck">
     {% for film in filmList %}
-        <div class="card-body">
-            <a href={{ path('detail_film', {id:film.id}) }} >
-                <img src="{{ asset('img/affiches/' ~ film.affiche) }}" alt="affiche">
-            </a>
-            <h4 class="card-title text-center">
-                {{ film.titre }} 
-                {% if film.annee is not null %}
-                    ({{ film.annee }})
-                {% endif %}
-            </h4>
-        </div>
+    <div class="card-body">
+        <a href={{ path('detail_film', {id:film.id}) }}>
+            <img src="{{ asset('img/affiches/' ~ film.affiche) }}" alt="affiche">
+        </a>
+        <h4 class="card-title text-center">
+            {{ film.titre }}
+            {% if film.annee is not null %}
+            ({{ film.annee }})
+            {% endif %}
+        </h4>
+    </div>
     {% endfor %}
 </div>
 
 
-{# {% if is_granted('ROLE_ADMIN') %}  #}
-    <a class="btn-block btn-lg btn-success text-center" href={{ path('create_film') }}> AJOUTER UN FILM </a> 
-{# {% endif %} #}
+{% if is_granted('ROLE_ADMIN') %}
+<a class="btn-block btn-lg btn-success text-center" href={{ path('create_film') }}> AJOUTER UN FILM </a>
+{% endif %}
 <br> <br>
 
 {% endblock %}
