--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,7 +49,7 @@
     </header>
 
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light pb-4" style="font-size:1.5rem; background-color: #0a0a0a;">
+    <nav class="navbar navbar-expand-lg navbar-dark pb-4" style="font-size:1.5rem; background-color: #0a0a0a;">
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
