correction admin modifier supprimer film

--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -10,7 +10,7 @@
 </div>
 {% endfor %}
 
-<div id="carouselExampleCaptions" class="carousel slide w-50" style="margin:auto" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide w-50 mb-5" style="margin:auto" data-ride="carousel">
   <ol class="carousel-indicators m-auto">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active" style="width:10%; margin:0;"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1" style="width:10%; margin:0;"></li>
