--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<div class="py-base">
+<div class="py-base mx-auto" style="width: 40rem">
     <form method="post">
         {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -16,12 +16,12 @@
         </div>
         {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Connectez-vous</h1>
+        <h1 class=" mb-3 font-weight-normal">Connectez-vous</h1>
         <label for="inputEmail">Email</label>
         <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
             autocomplete="email" required autofocus>
-            <br>
-        <label for="inputPassword">Mot de passe (Minimum 8 caractères)</label>
+        <br>
+        <label for="inputPassword">Mot de passe</label>
         <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password"
             required>
 
@@ -42,8 +42,8 @@
             Se connecter
         </button>
     </form>
-<br>
+    <br>
     <p>Vous n'avez pas encore un compte ?
-        <a href={{ path('register_utilisateur') }} class="btn btn-lg btn-success">Créer un compte</a></p>
+        <a href={{ path('register_utilisateur') }} class="btn btn-lg btn-secondary">Créer un compte</a></p>
 </div>
 {% endblock %}
