modif user/footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -109,7 +109,7 @@
     </div>
 
     <!-- footer -->
-    <footer class="py-1" style="background-color: #0a0a0a; bottom:0">
+    <footer class="py-1 footer" style="background-color: #0a0a0a; bottom:0">
         <div class="container">
             <div class="d-flex justify-content-around py-2">
                 <a style="color: #fff" class="lead footer-text" href={{ path('contact') }}>
