--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -108,6 +108,8 @@
         {% endblock %}
     </div>
 
+    <div style="padding-bottom: 5rem;">
+    </div>
     <!-- footer -->
     <footer class="py-1 footer" style="background-color: #0a0a0a; bottom:0">
         <div class="container">
