--- a/templates/utilisateurs/detail.html.twig
+++ b/templates/utilisateurs/detail.html.twig
@@ -35,7 +35,7 @@
             profil </a>
         <a href={{ path('update_password') }} class="btn btn-danger mr-3">Modifier votre mot de
             passe</a>
-        <a href=# class="btn btn-danger">Supprimer votre compte</a>
+        <a href={{ path('delete_utilisateur', {id:app.user.id}) }} class="btn btn-danger">Supprimer votre compte</a>
     </div>
 </div>
 {% endblock %}
